comment and reply text overflow issued kinda fixed

--- a/evup/public/css/app.css
+++ b/evup/public/css/app.css
@@ -2362,8 +2362,9 @@ body {
     flex-wrap: wrap;
   }
 
-  .whitespace-pre-wrap {
+  .comment-overflow {
     white-space: pre-wrap;
+    overflow: auto;
   }
   
   .placeholder\:italic::-moz-placeholder {
